Added some text shadow, adjusted font

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -425,7 +425,8 @@ p.license {
   line-height: 30px;
   text-align: center;
   border-radius: 8px;
-  font-style: italic;
+  font-weight: bold;
+  text-shadow: 0px 0px 6px rgba(0, 0, 0, .5);
 }
 .licensepar {
   color: #ffffff;
@@ -443,7 +444,8 @@ p.licensetrial {
   line-height: 30px;
   text-align: center;
   border-radius: 8px;
-  font-style: italic;
+  font-weight: bold;
+  text-shadow: 0px 0px 6px rgba(0, 0, 0, .5);
 }
 .licensepartrial {
   color: #ffffff;
@@ -452,6 +454,5 @@ p.licensetrial {
   text-align: center;
   margin-bottom: 100px;
 }
-
 
 
