--- a/content/index.slim
+++ b/content/index.slim
@@ -101,7 +101,7 @@ h1 ASP.NET library and image server
     |Create images that impress and inspire
   .container
     .span3.home3
-      iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk"
+      iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk?rel=0"
     .span3
     .span6
       p style= "margin-left: 60px; margin-right:30px"
