--- a/content/download.slim
+++ b/content/download.slim
@@ -75,7 +75,7 @@ h1 Download ImageResizer
     ul.arrow_list
       li
         a href="/support/contracts"  Get a support contract.
-        |  Elimiate risk and get the most of out ImageResizer with support contract. Support contracts include architecture planning, preventative consultation, emergency incident support, and custom development for your business's unique needs.
+        |  Elimiate risk and get the most of out ImageResizer with a support contract. Support contracts include architecture planning, preventative consultation, emergency incident support, and custom development for your business's unique needs.
       li
         a href="/docs/basics" Learn the basics. 
         |  Spend a few minutes learning the ropes before you get started making beautiful, functional, responsive websites in half the time.      
