Add zopim widget to home page

--- a/content/index.slim
+++ b/content/index.slim
@@ -1,6 +1,6 @@
 Menu: home
 Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source - MVC compatible
-Libs: uservoice, plusone, -comments, typed, -highlight
+Libs: uservoice, zopim, plusone, -comments, typed, -highlight
 Flags: unwrap
 Layout: layout
 Icon: none
