Remove prettygifs comparison until we can make it correct.

--- a/content/plugins/prettygifs.slim
+++ b/content/plugins/prettygifs.slim
@@ -16,7 +16,7 @@ p Replaces .NET's disgusting default GIF encoding algorithm with Octree quantiza
 - example_images = ['017','019','022','023','028','030']
 
 
-.row-fluid
+/ .row-fluid
   .span8.well
     div style="position:relative; text-align:center; width:100%;"
       span style="position:absolute; left:0"
