--- a/content/plugins/animatedgifs.slim
+++ b/content/plugins/animatedgifs.slim
@@ -11,7 +11,6 @@ p Adds support for resizing animated gifs. Once added, animated gifs will be res
 p Best used with disk caching, as large animations can take a while to process (sometimes even over a second).
 
 - image_width = 300
-- cache_buster = 38
 
 .row-fluid
   .span4.well
@@ -23,8 +22,8 @@ p Best used with disk caching, as large animations can take a while to process (
     br
     p
       .twentytwenty-container
-        img src="http://z.zr.io/rw/pluginexamples/example-animated.gif?format=jpeg&width=#{image_width}&random=#{cache_buster}" id="plugin-example-before"
-        img src="http://z.zr.io/rw/pluginexamples/example-animated.gif?width=#{image_width}&random=#{cache_buster}" id="plugin-example-after"
+        img src="http://z.zr.io/rw/pluginexamples/example-animated.gif?format=jpeg&width=#{image_width}" id="plugin-example-before"
+        img src="http://z.zr.io/rw/pluginexamples/example-animated.gif?width=#{image_width}" id="plugin-example-after"
 
     p 
       | Settings: width = 300
