--- a/content/plugins/whitespacetrimmer.slim
+++ b/content/plugins/whitespacetrimmer.slim
@@ -12,7 +12,6 @@ p
 
 - image_width = 600
 - image_thumb_width = 100
-- cache_buster = 00023
 - example_images = ['017','019','022','023','028','030-alt']
 
 .row-fluid
@@ -25,25 +24,25 @@ p
     br
     p
       .twentytwenty-container
-        img src="http://z.zr.io/rw/pluginexamples/example-017-whitespace.jpg?width=#{image_width}&random=#{cache_buster}" id="plugin-example-before"
-        img src="http://z.zr.io/rw/pluginexamples/example-017-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5&random=#{cache_buster}" id="plugin-example-after"
+        img src="http://z.zr.io/rw/pluginexamples/example-017-whitespace.jpg?width=#{image_width}" id="plugin-example-before"
+        img src="http://z.zr.io/rw/pluginexamples/example-017-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5" id="plugin-example-after"
 
     .row-fluid.hidden-phone
       - example_images.each do | img |
         .span2
           p 
-            a.plugin-example-button data-image-before="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&random=#{cache_buster}" data-image-after="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5&random=#{cache_buster}"
-              img src="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_thumb_width}&random=#{cache_buster}"
+            a.plugin-example-button data-image-before="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}" data-image-after="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5"
+              img src="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_thumb_width}"
     .visible-phone
       - example_images.each do | img |
-        a.plugin-example-button data-image-before="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&random=#{cache_buster}" data-image-after="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5&random=#{cache_buster}"
-          img src="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_thumb_width}&random=#{cache_buster}" width="55" height="55"
+        a.plugin-example-button data-image-before="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}" data-image-after="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5"
+          img src="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_thumb_width}" width="55" height="55"
         | &nbsp;
     p 
       | Settings: &amp;trim.threshold = 80 ,  &amp;trim.percentpadding = 0.5
 
 - example_images.each do | img |
-  img style="display:none;" src="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5&random=#{cache_buster}"
+  img style="display:none;" src="http://z.zr.io/rw/pluginexamples/example-#{img}-whitespace.jpg?width=#{image_width}&trim.threshold=80&trim.percentpadding=0.5"
 
 
 
