--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -416,4 +416,17 @@ ul.starlist.support {
   width: 100%; 
   height: 100%; 
 }
-
+code.nuget {
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+background-color: #202020;
+border: 4px solid silver;
+border-radius: 5px;
+box-shadow: 2px 2px 3px #6e6e6e;
+color: #e2e2e2;
+display: block;
+font: 1.3em 'andale mono','lucida console',monospace;
+line-height: 1.3em;
+overflow: auto;
+padding: 6px;
+}
