--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -129,6 +129,7 @@ h1 Licenses
           li Advanced file format support (PSD, CR2, DNG, etc)
           li Optional WIC processing pipeline (2-8x performance increase)
           li Smart whitespace removal (great for product photos!)
+          li Metadata preservation
       .signup
         form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1197635&amp;cl=41912&amp;ejc=2&amp;o1=Creative%20Edition%20(1%20domain)" target="ej_ejc" method="POST" accept-charset="UTF-8"
           a href="#" onClick="javascript:return EJEJC_lc(this.parentNode);" 
