Changed the name of one of the links for consistency

--- a/content/docs/tutorials.slim
+++ b/content/docs/tutorials.slim
@@ -18,7 +18,7 @@ markdown:
     h2 Resizing
     ul.star_list
       li: a href="/docs/howto/upload-and-resize" How to convert and resize images as they are uploaded
-      li: a href="/docs/howto/generate-versions" How to generate resized versions of an image
+      li: a href="/docs/howto/generate-versions" Generate thumbnails and multiple sizes to disk
       li: a href="/docs/howto/crop" Cropping
 .row.bottompadding
   .span4
