Added warning that the bundle system had been discontinued

--- a/content/plugins/bundles/free.slim
+++ b/content/plugins/bundles/free.slim
@@ -2,6 +2,7 @@ Aliases: /plugins/free
 Bundle: free
 Flags: bundle
 Cost: This bundle is 100% free. All bundles include source code.
+Warning: Bundles were discontinued on Feb. 1 2013 in favor of a simplified product model.
 
 
 h1 Free bundle
