Got rid of zopim, updated the stat on nuget downloads

--- a/content/index.slim
+++ b/content/index.slim
@@ -1,6 +1,6 @@
 Menu: home
 Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source - MVC compatible
-Libs: uservoice, zopim, plusone, -comments, typed, -highlight
+Libs: uservoice, plusone, -comments, typed, -highlight
 Flags: unwrap
 Layout: layout
 Icon: none
@@ -67,7 +67,7 @@ h1 ASP.NET library and image server
         a.block.statsbar href="http://www.nuget.org/profiles/nathanaeljones/"
           p
             i.icon-white.icon-cloud-download.statsnumber
-             |  340,000
+             |  438,000
           p
             |NuGet downloads of ImageResizer
           .clear
