Removed Dale from the staff page. (reverted from commit 589d3893a07d38bec592a572c3bdbd9bf670d43f)

--- a/content/staff.slim
+++ b/content/staff.slim
@@ -23,3 +23,14 @@ h1 Meet the Staff
       Until very, *very* recently, Liz was a student of the English language on her way toward a life in academia. She is currently living in an alternate universe where she designs websites and answers IT questions instead. Liz dreads the day when her comic book writers merge the universes and she has to fight canon Liz. 
   .span4
     img src="http://img.imageresizing.net/s3/resizer-images/me-at-alices.jpg?width=200"
+.row
+  .title
+    h2 Dale Ragan
+  .span8
+    h3 Code name: The Muscle
+    markdown:
+      Dale is an Ohio based software developer, passionate about building and improving the web. He is a co-founder of Moncaí, and works part-time on whatever projects Nathanael chucks at him. When he’s not working on any of that, he’s usually hacking on open source, blogging, speaking, and evangelizing .NET open source.
+
+      Dale's favorite muppet is Beaker.
+  .span4
+    img src="http://img.imageresizing.net/s3/resizer-images/dale.jpg?width=200"
