Updated the community section to reflect our Github repository going public

--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -49,7 +49,7 @@ h1 ImageResizer Community
 
     markdown:
 
-      **All Imazen software is developed on Github, with community collaboration**. **E-mail your GitHub username to `support@imageresizing.net`, and we'll give you access** to the [github.com/imazen/resizer repository](http://github.com/imazen/resizer). We've never denied a request for access, and we happily accept and test any [correctly licensed](/licenses/contribute) pull requests we receive.  To see a [list of other libraries Imazen has created, go to imazen.io](http://www.imazen.io/software).
+      **All Imazen software is developed on Github, with community collaboration**. Check out our [ Github repository here](http://github.com/imazen/resizer). We happily accept and test any [correctly licensed](/licenses/contribute) pull requests we receive.  To see a [list of other libraries Imazen has created, go to imazen.io](http://www.imazen.io/software).
 
       If you're new to Git, [we have instructions for installing and connecting to GitHub](/docs/git).
 
