Changed all references and links to e-junkie to the new imazen-store. Revived debugger.

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -1,7 +1,7 @@
 title: Licenses - Image Resizer
 Layout: layout
 Icon: notes
-Libs: pricer, -comments, ejunkie, ejunkiecart, uservoice
+Libs: pricer, -comments, uservoice
 Aliases: /pricing /prices /buy
 
 h1 Licenses
@@ -36,7 +36,7 @@ h1 Licenses
 
 .buy-page style="position:relative"
   span style="position:absolute; top:0px; right:0px;" 
-    <a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" onClick="javascript:return EJEJC_lc(this);">View shopping cart</a>
+    <a href="http://store.imazen.io/">Go to store</a>
   span style="position:absolute; top:0px; left:18px;"
     a href="/plugins" View full plugin list
   p.fineprint style="text-align:center"
@@ -104,8 +104,7 @@ h1 Licenses
               p See licenses -> Resizer Domain License for details
             | Floating wildcard domain license.
       .signup
-        form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1197635&amp;cl=41912&amp;ejc=2&amp;o1=Performance%20Edition%20(1%20domain)" target="ej_ejc" method="POST" accept-charset="UTF-8"
-          a href="#" onClick="javascript:return EJEJC_lc(this.parentNode);" 
+          a href="https://store.imazen.io/products/imageresizer-performance-license"
             span
             | Add to cart
       .signup
@@ -131,8 +130,7 @@ h1 Licenses
           li Smart whitespace removal (great for product photos!)
           li Metadata preservation
       .signup
-        form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1197635&amp;cl=41912&amp;ejc=2&amp;o1=Creative%20Edition%20(1%20domain)" target="ej_ejc" method="POST" accept-charset="UTF-8"
-          a href="#" onClick="javascript:return EJEJC_lc(this.parentNode);" 
+          a href="https://store.imazen.io/products/imageresizer-creative-license"
             span
             | Add to cart
       .signup
@@ -158,8 +156,7 @@ h1 Licenses
           li PSD editing and rendering
           li Batch processing and .zip file creation
       .signup
-        form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1197635&amp;cl=41912&amp;ejc=2&amp;o1=Elite%20Edition%20(1%20enterprise)" target="ej_ejc" method="POST" accept-charset="UTF-8"
-          a href="#" onClick="javascript:return EJEJC_lc(this.parentNode);" 
+          a href="https://store.imazen.io/products/imageresizer-elite-license"
             span
             | Add to cart
       .signup
