--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -1,5 +1,5 @@
 Title: Plugins - Image Resizer
-Libs: ejunkie, ejunkiecart, uservoice, -comments
+Libs: uservoice, -comments
 Aliases: /pl.. /plugin /pl
 
 h1 Plugin Index
