--- a/content/support/contracts/shopping_cart_link.slim
+++ b/content/support/contracts/shopping_cart_link.slim
@@ -1,10 +1,24 @@
 Flags: hidden
 
+ruby: 
+  gold_skus = ["Gold1YR","Gold2YR","Gold6MO"]
+  silver_skus = ["Silver1YR","Silver2YR" ,"Silver6MO"]
+  bronze_skus = ["Bronze1YR" ,"Bronze2YR" , "Bronze6MO"]
+  web = ""
+  #require 'pry'
+  #binding.pry
+  if gold_skus.include? product_value
+    web = "https://store.imazen.io/products/imageresizer-gold-support-contract-and-elite-license"
+  end
+  if silver_skus.include? product_value
+    web = "https://store.imazen.io/products/imageresizer-silver-support-contract-and-elite-license"
+  end
+  if bronze_skus.include? product_value
+    web = "https://store.imazen.io/products/imageresizer-bronze-support-contract-and-elite-license"
+  end
 
 
-form accept-charset="UTF-8" action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1087334&amp;cl=41912&amp;ejc=2" method="POST" target="ej_ejc" style="margin:0;padding:0;display:inline;"
-  input name="o1" type="hidden" value=product_value
-    a href="#" onClick="javascript:return EJEJC_lc(this.parentNode);"
-      == button_text
-      |  &nbsp;
-      i.icon-shopping-cart  
+a href=web
+  == button_text
+  |  &nbsp;
+  i.icon-shopping-cart  
