Fixed some broken links

--- a/content/support/contracts/details.slim
+++ b/content/support/contracts/details.slim
@@ -52,7 +52,7 @@ ruby:
 
     - if contract.lifetime_license && contract.major_upgrades
       markdown:
-       This support contract includes a permanent, [Enterprise-wide Elite license](/licenses/elite). You will be able to continue using the product after your subscription expires. While your support contract is active, you will receive free upgrades to all software included in your license. Major releases published *after* your contract expires are *not* included.
+       This support contract includes a permanent, [Enterprise-wide Elite license](/plugins/editions/elite). You will be able to continue using the product after your subscription expires. While your support contract is active, you will receive free upgrades to all software included in your license. Major releases published *after* your contract expires are *not* included.
 
        Features include:
     
