Removed the seam carving section until we can fix the seam carving bug.

--- a/content/benefits/comprehensive.slim
+++ b/content/benefits/comprehensive.slim
@@ -230,12 +230,13 @@ h2 Advanced
     h4 Red-eye repair
     img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&r.autoeyes=true"
     p Our adaptive circle fill algorithm repairs red-eye while maintaining integrity.
-  .span3
-    - w = widths(1,1)
-    h4 Change aspect ratio with seam carving
-    img src="http://z.zr.io/ri/3s.jpg?width=#{w[0]}"
-    i.icon-arrow-right
-    img src="http://z.zr.io/ri/3s.jpg?width=#{w[1]}&height=#{w[1]}&mode=carve"
+  /The second image is broken. We can uncomment this when we fix the bug that's breaking it.
+  /.span3
+  /  - w = widths(1,1)
+  /  h4 Change aspect ratio with seam carving
+  /  img src="http://z.zr.io/ri/3s.jpg?width=#{w[0]}"
+  /  i.icon-arrow-right
+  /  img src="http://z.zr.io/ri/3s.jpg?width=#{w[1]}&height=#{w[1]}&mode=carve"
 .row
 
   .span3
