Fix broken newsletter signup link on download page; correct download size -> 20MB

--- a/content/download.slim
+++ b/content/download.slim
@@ -17,7 +17,7 @@ h1 Download ImageResizer
       a href=latest_release.meta.fullfile class="btn btn-buynow"
         | Download Everything
     p 
-      |  Includes source, binaries, plugins, and sample code (15MB)
+      |  Includes source, binaries, plugins, and sample code (20MB)
  
     p style="margin-top:5px;font-size:12px; color:gray;margin-bottom:0"
        
@@ -82,7 +82,7 @@ h1 Download ImageResizer
         em all the time 
         | from customers who never realized the sheer variety of ImageResizer's capabilities. Come and see some of ImageResizer's wide assortment of features.
       li
-        a href="/newsleter/signup" Make sure you signed up for our newsletter. 
+        a href="/newsletter/signup" Make sure you signed up for our newsletter. 
         |It's only happened once (a long time ago), but if there is a security-related bug, this is how we let you know. 
         strong Extremely low-volume.
     
