--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -16,8 +16,11 @@ Layout: layout
             li class=(page.meta.category == c.tag ? "active" : "")
               a href=c.page
                 =c.title
-
-    == yield
+    - if page.meta.textclass
+      div class=(page.meta.textclass)
+        == yield
+    - else  
+        == yield
 
 
     - if page.meta.append
