--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -33,7 +33,12 @@ ul.slides.clients li{
 #page-title-inner a{
   color:white;
 }
-
+h1.mainheader a.header{
+  color:white;
+}
+h1.mainheader a.header:hover{
+  color:white;
+}
 
 form#newsletter{
   padding-left:0;
@@ -51,6 +56,12 @@ div.site-subheader{
 }
 .t p .price{
   font-weight:bold;
+}
+
+.t ul{
+  list-style: disc inside;
+  margin-top: 1em;
+  margin-bottom:1em;
 }
 
 .pricer .col .details ul li{background: none;}
@@ -114,6 +125,7 @@ a.editlink{color:white; float:left;}
 
 ul.category_headers{
   line-height:20px;
+  list-style: none;
   li {
     display:inline-block;
     padding:5px;
