Improve printing of pages on site (hide footer, extra links in navbar, artifacts, etc).

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -1,7 +1,7 @@
 Flags: visible
 Layout: false
 
-#footer-menu.hidden-tablet.hidden-phone
+#footer-menu.hidden-tablet.hidden-phone.savetrees
   .container
     .row
       .span3
@@ -27,7 +27,7 @@ Layout: false
       .span1
         #footer-menu-back-to-top
           a href="#"
-#footer
+#footer.savetrees
   .container
     .row
       .span4
