Fixed some typos

--- a/content/plugins/advancedfilters.slim
+++ b/content/plugins/advancedfilters.slim
@@ -152,8 +152,9 @@ ul
   li &amp;a.removenoise=1-100
 h3#sobel-energy-filter Sobel energy filter
 p
-  | Useful only for debugging why
+  | Useful only for debugging why 
   a href="/plugins/whitespacetrimmer"
+    | whitespace trimmer 
   | isn't working on an image.
 ul
   li &amp;a.sobel=true
