--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -33,7 +33,7 @@ Layout: false
       .span4
         h3 About
         markdown:
-          ImageResizer is the result of 7 years of continual refinement, with a focus on security, stability, and image quality. Thousands of popular websites rely on ImageResizer; some with millions of pageviews each day, like [Sierra Trading Post, MSN, and eBay](/testimonials).
+          ImageResizer is the result of 9 years of continual refinement, with a focus on security, stability, and image quality. Thousands of popular websites rely on ImageResizer; some with millions of pageviews each day, like [Sierra Trading Post, MSN, and eBay](/testimonials).
 
           It provides far more than image resizing; [with our 40+ plugins](/plugins), it becomes a **comprehensive media processing suite**.
 
@@ -77,7 +77,7 @@ Layout: false
 
           We provide free support for all bug-related requests, and [**offer a $5-$100 reward** for discovering a bug (details)](/support#bugbounty). 
 
-          *Please* reserve on-page comments for questions and clarifications *related to to the current page*; in most cases, it's *not* the appropriate place to ask for support.
+          *Please* reserve on-page comments for questions and clarifications *related to to the current page*. The comments are *not* the appropriate place to ask for support or troubleshooting assistance.
 
                 
      
