--- a/content/download.slim
+++ b/content/download.slim
@@ -52,7 +52,7 @@ h1 Download ImageResizer
       strong trial licenses 
       |for testing and 
       strong free licenses 
-      |for basic capabilities.
+      |for basic capabilities and open-source projects.
     p.bottompadding style="margin-top:10px"
       a href="/licenses" class="btn btn-primary"
         strong Compare Licenses
